# vitals

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: agent.rs  analytics.rs  audit.rs  auth.rs  config.rs  detector.rs  error.rs  klaxon.rs  lib.rs  main.rs  metrics.rs  probe.rs  render.rs  store.rs
src/handlers/: api.rs  dashboard.rs  health.rs  ingest.rs  mod.rs
static/: app.css
tests/: dashboard.rs  ingest_auth.rs  pg_store.rs  proc_parse.rs  store_roundtrip.rs
tests/fixtures/: loadavg  meminfo  net_dev  stat1  stat2
